@@ -20852,6 +20852,174 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testResolveMaven2WithVersionProperty
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Ivy
+name|ivy
+init|=
+operator|new
+name|Ivy
+argument_list|()
+decl_stmt|;
+name|ivy
+operator|.
+name|configure
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/m2/ivysettings.xml"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|ResolveReport
+name|report
+init|=
+name|ivy
+operator|.
+name|resolve
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/m2/org/apache/test-version/1.0/test-version-1.0.pom"
+argument_list|)
+operator|.
+name|toURL
+argument_list|()
+argument_list|,
+name|getResolveOptions
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"*"
+block|}
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|report
+argument_list|)
+expr_stmt|;
+name|ModuleDescriptor
+name|md
+init|=
+name|report
+operator|.
+name|getModuleDescriptor
+argument_list|()
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|md
+argument_list|)
+expr_stmt|;
+name|ModuleRevisionId
+name|mrid
+init|=
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"org.apache"
+argument_list|,
+literal|"test-version"
+argument_list|,
+literal|"1.0"
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|mrid
+argument_list|,
+name|md
+operator|.
+name|getModuleRevisionId
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|ivy
+operator|.
+name|getCacheManager
+argument_list|(
+name|_cache
+argument_list|)
+operator|.
+name|getResolvedIvyFileInCache
+argument_list|(
+name|mrid
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// dependencies
+name|assertTrue
+argument_list|(
+name|ivy
+operator|.
+name|getCacheManager
+argument_list|(
+name|_cache
+argument_list|)
+operator|.
+name|getIvyFileInCache
+argument_list|(
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"org.apache"
+argument_list|,
+literal|"test-classifier"
+argument_list|,
+literal|"1.0"
+argument_list|)
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|TestHelper
+operator|.
+name|getArchiveFileInCache
+argument_list|(
+name|ivy
+argument_list|,
+name|_cache
+argument_list|,
+literal|"org.apache"
+argument_list|,
+literal|"test-classifier"
+argument_list|,
+literal|"1.0"
+argument_list|,
+literal|"test-classifier"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testNamespaceMapping
 parameter_list|()
 throws|throws
