@@ -1138,6 +1138,89 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+specifier|public
+name|void
+name|testWithVersionProperty
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|ModuleDescriptor
+name|md
+init|=
+name|PomModuleDescriptorParser
+operator|.
+name|getInstance
+argument_list|()
+operator|.
+name|parseDescriptor
+argument_list|(
+operator|new
+name|IvySettings
+argument_list|()
+argument_list|,
+name|getClass
+argument_list|()
+operator|.
+name|getResource
+argument_list|(
+literal|"test-version.pom"
+argument_list|)
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|md
+argument_list|)
+expr_stmt|;
+name|DependencyDescriptor
+index|[]
+name|dds
+init|=
+name|md
+operator|.
+name|getDependencies
+argument_list|()
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|dds
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|dds
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"org.apache"
+argument_list|,
+literal|"test-other"
+argument_list|,
+literal|"1.0"
+argument_list|)
+argument_list|,
+name|dds
+index|[
+literal|0
+index|]
+operator|.
+name|getDependencyRevisionId
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 comment|// IVY-392
 specifier|public
 name|void
